...
                    android:textColor="#008C6E"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="26dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputAtmaSalon"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_user"
                    app:boxCornerRadiusBottomEnd="30dp"
...
                        android:text="@={user.nama}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputAtmaSalon"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_user"
                    app:boxCornerRadiusBottomEnd="30dp"
...
                        android:text="@={user.email}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputAtmaSalon"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_password"
                    app:passwordToggleEnabled="true"
...
                        android:text="@={user.password}"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputAtmaSalon"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_password"
                    app:passwordToggleEnabled="true"
...
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:id="@+id/radioGroupKelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:errorEnabled="true"
                    android:layout_marginBottom="10dp">
                    <RadioButton
                        android:fontFamily="@font/inter_regular"
                        android:id="@+id/radioPria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pria"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="30dp"/>
...
                        android:textSize="14sp"
                        android:textColor="@color/black"/>
                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputAtmaSalon"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_phone"
                    app:boxCornerRadiusBottomEnd="30dp"
...
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btnDaftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
...
