...
    <string name="tambah_saldo">Tambah Saldo</string>
    <string name="anda_dapat_melakukan_reservasi_dengan_menekan_tombol_di_bawah_ini">Anda dapat melakukan reservasi dengan menekan tombol di bawah ini</string>
    <string name="reservasi">Reservasi</string>
    <string name="form_daftar">Form Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="form_masuk">Form Masuk</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar">Daftar</string>
    <string name="beranda">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="profil">Profil</string>
    <string name="kembali">Kembali</string>
    <string name="textV">/</string>
    <string name="atma_salon">Atma Salon</string>
...
